Scrollbar working, a few minor bugs that I still need to fix regarding mouseUp. Also need to make sure that the view changes based on the xPos of the scrollbar.

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #1c2838;
+}
+
 .block {
   background-color: #1c2838;
   margin-top: 40px;
@@ -41,9 +45,12 @@ a:-webkit-any-link {
   width: 38px;
   top: 0;
   bottom: 0;
-  background-color: rgba(198, 202, 209, 0.4);
-  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+.slider_left:hover, .slider_right:hover {
+  background-color: rgba(198, 202, 209, 0.2);
 }
 
 .slider_left {
@@ -82,11 +89,15 @@ a:-webkit-any-link {
 .handle {
   position: absolute;
   top: 0;
-  background-color: rgba(198, 202, 209, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: 3px;
   height: 18px;
   width: 60px;
   cursor: pointer;
+}
+
+.handle:hover {
+  background-color: rgba(198, 202, 209, 0.2);
 }
 
 .store_horizontal_games {
@@ -109,6 +120,10 @@ a:-webkit-any-link {
   height: 100px;
   margin-right: 2px;
   position: relative;
+}
+
+.game_info:hover {
+  background-color: rgba(198, 202, 209, 0.2);
 }
 
 .game_info img {
